--- a/login.html
+++ b/login.html
@@ -1,37 +1,53 @@
-<!DOCTYPE html><html lang="it"><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
+<!DOCTYPE html>
+<html lang="it">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Accedi</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="css/style.css">
-
-
-</head><body class="container py-5">
+<link rel="stylesheet" href="style.css">
+<meta name="robots" content="noindex">
+</head>
+<body class="container py-5">
   <h1 class="text-center mb-4">🔐 Accedi</h1>
+
   <form id="loginForm" class="mx-auto" style="max-width:420px">
     <div class="mb-3">
       <label class="form-label">Email</label>
-      <input id="email" type="email" class="form-control" required>
+      <input id="email" type="email" class="form-control" required autocomplete="username">
     </div>
     <div class="mb-3">
       <label class="form-label">Password</label>
-      <input id="password" type="password" class="form-control" required>
+      <input id="password" type="password" class="form-control" required autocomplete="current-password">
     </div>
     <button class="btn btn-primary w-100" type="submit">Entra</button>
-    <button id="googleBtn" class="btn btn-outline-secondary w-100 mt-2" type="button">Accedi con Google</button>
+    <!-- Se abiliti Google:
+    <button id="googleBtn" class="btn btn-outline-secondary w-100 mt-2" type="button">Accedi con Google</button> -->
   </form>
+
   <script type="module">
-    import { emailLogin, googleLogin } from "./js/auth.js";
+    import { emailLogin, /*googleLogin,*/ bounceIfLogged } from "./auth.js";
+    // Se già autenticato, vai via da qui
+    bounceIfLogged();
+
     const f = document.getElementById("loginForm");
     f.addEventListener("submit", async (e)=>{
       e.preventDefault();
       const email = document.getElementById("email").value.trim();
       const pass  = document.getElementById("password").value;
-      try { await emailLogin(email, pass); location.href = "/index.html"; }
-      catch(err){ alert(err.message); }
+      try {
+        await emailLogin(email, pass);
+        // bounceIfLogged farà il redirect (rispetta ?from=)
+        location.href = "index.html";
+      } catch (err) {
+        alert(err.message);
+      }
     });
-    document.getElementById("googleBtn").onclick = async ()=>{
-      try { await googleLogin(); location.href="/index.html"; }
-      catch(err){ alert(err.message); }
-    };
+
+    // document.getElementById("googleBtn")?.addEventListener("click", async ()=>{
+    //   try { await googleLogin(); location.href = "index.html"; }
+    //   catch(err){ alert(err.message); }
+    // });
   </script>
-</body></html>
+</body>
+</html>
