--- a/login.html
+++ b/login.html
@@ -24,7 +24,7 @@
   </form>
 
   <script type="module">
-    import { emailLogin, bounceIfLogged } from "./auth.js";
+    import { emailLogin, bounceIfLogged } from "./js/auth.js";
 
     // Se già loggato, rimbalza via da qui (rispetta ?from=)
     bounceIfLogged();
