--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Riepilogo</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/style.css">
 <meta name="robots" content="noindex">
 <script>
-  // Evita flash dei contenuti prima del check auth
+  /* Evita flash dei contenuti prima del check auth */
   document.documentElement.classList.add('auth-checking');
 </script>
 </head>
@@ -31,8 +31,7 @@
     requireAuth();
 
     document.getElementById("logoutLink")?.addEventListener("click",(e)=>{
-      e.preventDefault();
-      logout();
+      e.preventDefault(); logout();
     });
 
     // Mostra l'email quando disponibile
