--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Accedi</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/style.css">
 <meta name="robots" content="noindex">
 </head>
 <body class="container py-5">
@@ -26,7 +26,7 @@
   <script type="module">
     import { emailLogin, bounceIfLogged } from "./js/auth.js";
 
-    // Se già loggato, rimbalza via da qui (rispetta ?from=)
+    // Se già loggato, rimbalza (rispetta ?from=)
     bounceIfLogged();
 
     const form = document.getElementById("loginForm");
