navbar comune e rimozione filtro storico

--- a/index.html
+++ b/index.html
@@ -19,12 +19,14 @@
     <div class="alert alert-success text-center mt-4">Autenticazione OK</div>
   </div>
 
-  <nav class="navbar navbar-dark bg-dark fixed-bottom">
-    <div class="container-fluid d-flex justify-content-between">
-      <span class="navbar-text text-white">Registro spese personali</span>
-      <a class="nav-link text-white" href="#" id="logoutLink">Esci</a>
-    </div>
-  </nav>
+<nav class="navbar navbar-dark bg-dark fixed-bottom">
+  <div class="container-fluid d-flex justify-content-around">
+    <a class="nav-link text-white" data-page="index.html" href="index.html">Riepilogo</a>
+    <a class="nav-link text-white" data-page="inserisci.html" href="inserisci.html">➕ Inserisci</a>
+    <a class="nav-link text-white" data-page="storico.html" href="storico.html">Storico</a>
+    <a class="nav-link text-white" href="#" id="logoutLink">Esci</a>
+  </div>
+</nav>
 
   <script type="module">
     import { requireAuth, currentUser, logout } from "./js/auth.js";
