--- a/login.html
+++ b/login.html
@@ -13,11 +13,11 @@
 
   <form id="loginForm" class="mx-auto" style="max-width:420px">
     <div class="mb-3">
-      <label class="form-label">Email</label>
+      <label class="form-label" for="email">Email</label>
       <input id="email" type="email" class="form-control" required autocomplete="username">
     </div>
     <div class="mb-3">
-      <label class="form-label">Password</label>
+      <label class="form-label" for="password">Password</label>
       <input id="password" type="password" class="form-control" required autocomplete="current-password">
     </div>
     <button class="btn btn-primary w-100" type="submit">Entra</button>
