--- a/index.html
+++ b/index.html
@@ -5,45 +5,48 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Riepilogo</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="preconnect" href="https://www.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://identitytoolkit.googleapis.com" crossorigin>
+<link rel="preconnect" href="https://firestore.googleapis.com" crossorigin>
 <link rel="stylesheet" href="css/style.css">
 <meta name="robots" content="noindex">
-<script>
-  /* Evita flash dei contenuti prima del check auth */
-  document.documentElement.classList.add('auth-checking');
-</script>
 </head>
 <body>
-  <div class="container mt-4">
-    <h1 class="text-center">📊 Riepilogo</h1>
+  <!-- Header fuori dall'area protetta: il LCP esce subito -->
+  <h1 class="text-center mt-4">📊 Riepilogo</h1>
+
+  <!-- Area protetta -->
+  <div class="container mt-2" data-guard>
     <p id="who" class="text-center text-muted">Caricamento utente…</p>
     <div class="alert alert-success text-center mt-4">Autenticazione OK</div>
   </div>
 
-<nav class="navbar navbar-dark bg-dark fixed-bottom">
-  <div class="container-fluid d-flex justify-content-around">
-    <a class="nav-link text-white" data-page="index.html" href="index.html">Riepilogo</a>
-    <a class="nav-link text-white" data-page="inserisci.html" href="inserisci.html">➕ Inserisci</a>
-    <a class="nav-link text-white" data-page="storico.html" href="storico.html">Storico</a>
-    <a class="nav-link text-white" href="#" id="logoutLink">Esci</a>
-  </div>
-</nav>
+  <!-- Navbar comune -->
+  <nav class="navbar navbar-dark bg-dark fixed-bottom">
+    <div class="container-fluid d-flex justify-content-around">
+      <a class="nav-link text-white" data-page="index.html" href="index.html">Riepilogo</a>
+      <a class="nav-link text-white" data-page="inserisci.html" href="inserisci.html">➕ Inserisci</a>
+      <a class="nav-link text-white" data-page="storico.html" href="storico.html">Storico</a>
+      <a class="nav-link text-white" href="#" id="logoutLink">Esci</a>
+    </div>
+  </nav>
 
   <script type="module">
     import { requireAuth, currentUser, logout } from "./js/auth.js";
     requireAuth();
 
-    document.getElementById("logoutLink")?.addEventListener("click",(e)=>{
-      e.preventDefault(); logout();
+    // navbar attiva + logout
+    const file = (location.pathname.split("/").pop() || "index.html").toLowerCase();
+    document.querySelectorAll('nav a[data-page]').forEach(a=>{
+      if (a.getAttribute('data-page') === file) a.classList.add('fw-bold','text-decoration-underline');
     });
+    document.getElementById("logoutLink")?.addEventListener("click",(e)=>{ e.preventDefault(); logout(); });
 
-    // Mostra l'email quando disponibile
+    // mostra email
     const t = setInterval(()=>{
       const u = currentUser();
-      if (u) {
-        document.getElementById("who").textContent = `Connesso come ${u.email}`;
-        clearInterval(t);
-      }
-    }, 200);
+      if (u) { document.getElementById("who").textContent = `Connesso come ${u.email}`; clearInterval(t); }
+    },200);
   </script>
 </body>
 </html>
