--- a/inserisci.html
+++ b/inserisci.html
@@ -5,33 +5,36 @@
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>➕ Inserisci spesa</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<link rel="preconnect" href="https://www.gstatic.com" crossorigin>
+<link rel="preconnect" href="https://identitytoolkit.googleapis.com" crossorigin>
+<link rel="preconnect" href="https://firestore.googleapis.com" crossorigin>
 <link rel="stylesheet" href="css/style.css">
 <meta name="robots" content="noindex">
-<script>document.documentElement.classList.add('auth-checking');</script>
 </head>
 <body>
-  <div class="container mt-4" style="max-width: 640px;">
-    <h1 class="text-center">➕ Inserisci spesa</h1>
+  <h1 class="text-center mt-4">➕ Inserisci spesa</h1>
+
+  <div class="container mt-2" style="max-width:640px" data-guard>
     <div id="msg"></div>
 
     <form id="formSpesa" class="mt-3">
       <div class="mb-3">
-        <label class="form-label">Data</label>
+        <label class="form-label" for="data">Data</label>
         <input id="data" type="date" class="form-control" required>
       </div>
 
       <div class="mb-3">
-        <label class="form-label">Descrizione</label>
+        <label class="form-label" for="descrizione">Descrizione</label>
         <input id="descrizione" type="text" class="form-control" required>
       </div>
 
       <div class="mb-3">
-        <label class="form-label">Importo (€)</label>
+        <label class="form-label" for="importo">Importo (€)</label>
         <input id="importo" type="number" step="0.01" min="0" class="form-control" required>
       </div>
 
       <div class="mb-3">
-        <label class="form-label">Categoria</label>
+        <label class="form-label" for="categoria">Categoria</label>
         <select id="categoria" class="form-select" required>
           <option value="Cibo">Cibo</option>
           <option value="Casa">Casa</option>
@@ -43,7 +46,7 @@
       </div>
 
       <div class="mb-3">
-        <label class="form-label">Etichette (separate da virgola)</label>
+        <label class="form-label" for="etichette">Etichette (separate da virgola)</label>
         <input id="etichette" type="text" class="form-control" placeholder="es. fisso, abbonamento">
       </div>
 
@@ -51,21 +54,29 @@
     </form>
   </div>
 
-<nav class="navbar navbar-dark bg-dark fixed-bottom">
-  <div class="container-fluid d-flex justify-content-around">
-    <a class="nav-link text-white" data-page="index.html" href="index.html">Riepilogo</a>
-    <a class="nav-link text-white" data-page="inserisci.html" href="inserisci.html">➕ Inserisci</a>
-    <a class="nav-link text-white" data-page="storico.html" href="storico.html">Storico</a>
-    <a class="nav-link text-white" href="#" id="logoutLink">Esci</a>
-  </div>
-</nav>
+  <!-- Navbar comune -->
+  <nav class="navbar navbar-dark bg-dark fixed-bottom">
+    <div class="container-fluid d-flex justify-content-around">
+      <a class="nav-link text-white" data-page="index.html" href="index.html">Riepilogo</a>
+      <a class="nav-link text-white" data-page="inserisci.html" href="inserisci.html">➕ Inserisci</a>
+      <a class="nav-link text-white" data-page="storico.html" href="storico.html">Storico</a>
+      <a class="nav-link text-white" href="#" id="logoutLink">Esci</a>
+    </div>
+  </nav>
 
   <script type="module">
-    import { requireAuth } from "./js/auth.js";
+    import { requireAuth, logout } from "./js/auth.js";
     import { addSpesa } from "./js/spese.js";
     requireAuth();
 
-    // default: oggi
+    // navbar attiva + logout
+    const file = (location.pathname.split("/").pop() || "index.html").toLowerCase();
+    document.querySelectorAll('nav a[data-page]').forEach(a=>{
+      if (a.getAttribute('data-page') === file) a.classList.add('fw-bold','text-decoration-underline');
+    });
+    document.getElementById("logoutLink")?.addEventListener("click",(e)=>{ e.preventDefault(); logout(); });
+
+    // default oggi
     const today = new Date();
     document.getElementById("data").value = today.toISOString().slice(0,10);
 
