--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 
   <form id="loginForm" class="mx-auto" style="max-width:420px">
     <div class="mb-3">
-      <label class="form-label" for="email">Email</label>
+      <label class="form-label" for="email">E-mail</label>
       <input id="email" type="email" class="form-control" required autocomplete="username">
     </div>
     <div class="mb-3">
