--- a/login.html
+++ b/login.html
@@ -1,47 +1,42 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Accedi</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="stylesheet" href="css/style.css">
-<meta name="robots" content="noindex">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Accedi</title>
+
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Il tuo CSS -->
+  <link rel="stylesheet" href="css/style.css">
+
+  <meta name="robots" content="noindex">
 </head>
-<body class="container py-5">
-  <h1 class="text-center mb-4">🔐 Accedi</h1>
+<body class="page-login">
+  <main class="container d-flex align-items-center justify-content-center min-vh-100 py-5">
+    <div class="card shadow-sm login-card w-100">
+      <div class="card-body p-4 p-md-5">
+        <h1 class="h4 text-center mb-4">🔐 Accedi</h1>
 
-  <form id="loginForm" class="mx-auto" style="max-width:420px">
-    <div class="mb-3">
-      <label class="form-label" for="email">E-mail</label>
-      <input id="email" type="email" class="form-control" required autocomplete="username">
+        <div id="msg" class="mb-3"></div>
+
+        <form id="loginForm" class="login-form mx-auto" novalidate>
+          <div class="mb-3">
+            <label class="form-label" for="email">E-mail</label>
+            <input id="email" type="email" class="form-control" required autocomplete="username">
+          </div>
+          <div class="mb-3">
+            <label class="form-label" for="password">Password</label>
+            <input id="password" type="password" class="form-control" required autocomplete="current-password">
+          </div>
+          <button class="btn btn-primary w-100" type="submit">Entra</button>
+        </form>
+      </div>
     </div>
-    <div class="mb-3">
-      <label class="form-label" for="password">Password</label>
-      <input id="password" type="password" class="form-control" required autocomplete="current-password">
-    </div>
-    <button class="btn btn-primary w-100" type="submit">Entra</button>
-  </form>
+  </main>
 
-  <script type="module">
-    import { emailLogin, bounceIfLogged } from "./js/auth.js";
-
-    // Se già loggato, rimbalza (rispetta ?from=)
-    bounceIfLogged();
-
-    const form = document.getElementById("loginForm");
-    form.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      const email = document.getElementById("email").value.trim();
-      const pass  = document.getElementById("password").value;
-      try {
-        await emailLogin(email, pass);
-        const back = new URL(location.href).searchParams.get("from");
-        location.href = back || "index.html";
-      } catch (err) {
-        alert(err.message);
-      }
-    });
-  </script>
+  <!-- JS di pagina -->
+  <script type="module" src="js/login.js"></script>
 </body>
 </html>
