--- a/login.html
+++ b/login.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it">
+<html lang="it" data-bs-theme="dark">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -16,11 +16,10 @@
 <body class="page-login">
   <main class="container d-flex align-items-center justify-content-center min-vh-100 py-5">
     <div class="card shadow-sm login-card w-100">
+      <div class="card-header">
+      Accedi
+      </div>
       <div class="card-body p-4 p-md-5">
-        <h1 class="h4 text-center mb-4">🔐 Accedi</h1>
-
-        <div id="msg" class="mb-3"></div>
-
         <form id="loginForm" class="login-form mx-auto" novalidate>
           <div class="mb-3">
             <label class="form-label" for="email">E-mail</label>
