--- a/login.html
+++ b/login.html
@@ -8,15 +8,17 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-  <!-- Il tuo CSS -->
+  <!-- Mio CSS -->
   <link rel="stylesheet" href="css/style.css">
 
-  <meta name="robots" content="noindex">
 </head>
-<body class="page-login">
-  <main class="container d-flex align-items-center justify-content-center min-vh-100 py-5">
-    <div class="card shadow-sm login-card w-100">
-      <div class="card-header">
+<body class="container">
+  <main class="container py-5">
+    <div class="container text-center">
+      <img class="mb-4" src="/IMG/icon.png" alt="" width="72" height="57">
+    </div>
+    <div class="card shadow-sm">
+      <div class="card-header text-center">
       Accedi
       </div>
       <div class="card-body p-4 p-md-5">
