--- a/login.html
+++ b/login.html
@@ -15,10 +15,10 @@
 <body class="container ">
   <main class="container">
     <div class="container text-center">
-      <img class="mb-4" src="/IMG/icon.png" alt="" width="72" height="57">
+      <img class="mb-4" src="IMG/icon.png" alt="" width="72" height="57">
     </div>
     <div class="container">
-      <div class="card mx-auto p-2 shadow-sm">
+      <div class="card w-75 mx-auto p-2 shadow-sm style">
         <div class="card-header text-center">
         Accedi
         </div>
