--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
       <img class="mb-4" src="IMG/icon.png" alt="" width="72" height="57">
     </div>
     <div class="container">
-      <div class="card w-75 mx-auto p-2 shadow-sm style">
+      <div class="card mx-auto p-2 shadow-sm" style="max-width: 420px">
         <div class="card-header text-center">
         Accedi
         </div>
