--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/style.css">
 
 </head>
-<body class="container ">
+<body class="container min-vh-100 d-flex flex-column justify-content-center align-items-center gap-4">
   <main class="container">
     <div class="container text-center">
       <img class="mb-4" src="IMG/icon.png" alt="" width="72" height="57">
