--- a/inserisci.html
+++ b/inserisci.html
@@ -12,88 +12,196 @@
 <meta name="robots" content="noindex">
 </head>
 <body>
-  <!-- Sezione Navbar -->
+  <!-- Navbar -->
   <nav class="navbar py-2 bg-dark border-bottom border-body" data-bs-theme="dark">
     <div class="container d-flex flex-wrap">
-        <a class="navbar-brand" href="index.html">
-            <img src="IMG/icon.png" alt="Registro spese personali" width="40" height="40">
-        </a>
-        <ul class="nav">
-            <li class="nav-item">   
-                <a type="button" class="btn btn-dark" href="storico.html">                     
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#ffffff" class="bi bi-database" viewBox="0 0 16 16">
-                        <path d="M4.318 2.687C5.234 2.271 6.536 2 8 2s2.766.27 3.682.687C12.644 3.125 13 3.627 13 4c0 .374-.356.875-1.318 1.313C10.766 5.729 9.464 6 8 6s-2.766-.27-3.682-.687C3.356 4.875 3 4.373 3 4c0-.374.356-.875 1.318-1.313M13 5.698V7c0 .374-.356.875-1.318 1.313C10.766 8.729 9.464 9 8 9s-2.766-.27-3.682-.687C3.356 7.875 3 7.373 3 7V5.698c.271.202.58.378.904.525C4.978 6.711 6.427 7 8 7s3.022-.289 4.096-.777A5 5 0 0 0 13 5.698M14 4c0-1.007-.875-1.755-1.904-2.223C11.022 1.289 9.573 1 8 1s-3.022.289-4.096.777C2.875 2.245 2 2.993 2 4v9c0 1.007.875 1.755 1.904 2.223C4.978 15.71 6.427 16 8 16s3.022-.289 4.096-.777C13.125 14.755 14 14.007 14 13zm-1 4.698V10c0 .374-.356.875-1.318 1.313C10.766 11.729 9.464 12 8 12s-2.766-.27-3.682-.687C3.356 10.875 3 10.373 3 10V8.698c.271.202.58.378.904.525C4.978 9.71 6.427 10 8 10s3.022-.289 4.096-.777A5 5 0 0 0 13 8.698m0 3V13c0 .374-.356.875-1.318 1.313C10.766 14.729 9.464 15 8 15s-2.766-.27-3.682-.687C3.356 13.875 3 13.373 3 13v-1.302c.271.202.58.378.904.525C4.978 12.71 6.427 13 8 13s3.022-.289 4.096-.777c.324-.147.633-.323.904-.525"/>
-                    </svg>
-                </a>
-        </button>
-            </li>
-            <li class="nav-item">
-                <a type="button" class="btn btn-dark" href="inserisci.html">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#ffffff" class="bi bi-plus-square" viewBox="0 0 16 16">
-                        <path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"></path>
-                        <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"></path>
-                    </svg>
-                </a>
-            </li>
-        </ul>
+      <a class="navbar-brand" href="index.html">
+        <img src="IMG/icon.png" alt="Registro spese personali" width="40" height="40">
+      </a>
+      <ul class="nav">
+        <li class="nav-item">
+          <a class="btn btn-dark" href="storico.html">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#ffffff" class="bi bi-database" viewBox="0 0 16 16"><path d="M4.318 2.687C5.234 2.271 6.536 2 8 2s2.766.27 3.682.687C12.644 3.125 13 3.627 13 4c0 .374-.356.875-1.318 1.313C10.766 5.729 9.464 6 8 6s-2.766-.27-3.682-.687C3.356 4.875 3 4.373 3 4c0-.374.356-.875 1.318-1.313M13 5.698V7c0 .374-.356.875-1.318 1.313C10.766 8.729 9.464 9 8 9s-2.766-.27-3.682-.687C3.356 7.875 3 7.373 3 7V5.698c.271.202.58.378.904.525C4.978 6.711 6.427 7 8 7s3.022-.289 4.096-.777A5 5 0 0 0 13 5.698M14 4c0-1.007-.875-1.755-1.904-2.223C11.022 1.289 9.573 1 8 1s-3.022.289-4.096.777C2.875 2.245 2 2.993 2 4v9c0 1.007.875 1.755 1.904 2.223C4.978 15.71 6.427 16 8 16s3.022-.289 4.096-.777C13.125 14.755 14 14.007 14 13zm-1 4.698V10c0 .374-.356.875-1.318 1.313C10.766 11.729 9.464 12 8 12s-2.766-.27-3.682-.687C3.356 10.875 3 10.373 3 10V8.698c.271.202.58.378.904.525C4.978 9.71 6.427 10 8 10s3.022-.289 4.096-.777c.324-.147.633-.323.904-.525"/></svg>
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="btn btn-dark" href="inserisci.html">
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#ffffff" class="bi bi-plus-square" viewBox="0 0 16 16"><path d="M14 1a1 1 0 0 1 1 1v12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1zM2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"></path><path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4"></path></svg>
+          </a>
+        </li>
+      </ul>
     </div>
   </nav>
 
-  <div class="container mt-2" style="max-width:640px" data-guard>
+  <div class="container mt-2" style="max-width:700px">
     <div id="msg"></div>
 
     <form id="formSpesa" class="mt-3">
-      <div class="mb-3">
-        <label class="form-label" for="data">Data</label>
-        <input id="data" type="date" class="form-control" required>
+      <!-- BASE -->
+      <div class="row g-3">
+        <div class="col-12 col-sm-6">
+          <label class="form-label" for="data">Data</label>
+          <input id="data" type="date" class="form-control" required>
+        </div>
+        <div class="col-12 col-sm-6">
+          <label class="form-label" for="categoria">Categoria</label>
+          <select id="categoria" class="form-select" required>
+            <option value="Cibo">Cibo</option>
+            <option value="Casa">Casa</option>
+            <option value="Trasporti">Trasporti</option>
+            <option value="Svago">Svago</option>
+            <option value="Salute">Salute</option>
+            <option value="Altro" selected>Altro</option>
+          </select>
+        </div>
+        <div class="col-12">
+          <label class="form-label" for="descrizione">Descrizione</label>
+          <input id="descrizione" type="text" class="form-control" required>
+        </div>
+        <div class="col-12 col-sm-6">
+          <label class="form-label" for="importo">Importo (€)</label>
+          <input id="importo" type="number" step="0.01" min="0" class="form-control" required>
+        </div>
+        <div class="col-12 col-sm-6">
+          <label class="form-label" for="etichette">Etichette (separate da virgola)</label>
+          <input id="etichette" type="text" class="form-control" placeholder="es. fisso, abbonamento">
+        </div>
       </div>
 
-      <div class="mb-3">
-        <label class="form-label" for="descrizione">Descrizione</label>
-        <input id="descrizione" type="text" class="form-control" required>
+      <hr class="my-3">
+
+      <!-- SWITCH RICORRENTE -->
+      <div class="form-check form-switch mb-2">
+        <input class="form-check-input" type="checkbox" id="recSwitch">
+        <label class="form-check-label" for="recSwitch">Ricorrente</label>
       </div>
 
-      <div class="mb-3">
-        <label class="form-label" for="importo">Importo (€)</label>
-        <input id="importo" type="number" step="0.01" min="0" class="form-control" required>
+      <!-- PANNELLO RICORRENZA -->
+      <div id="recPanel" class="border rounded p-3" style="display:none;">
+        <div class="row g-3">
+          <div class="col-12 col-sm-6">
+            <label class="form-label" for="recFreq">Frequenza</label>
+            <select id="recFreq" class="form-select">
+              <option value="monthly" selected>Mensile</option>
+              <option value="weekly">Settimanale</option>
+              <option value="yearly">Annuale</option>
+            </select>
+          </div>
+          <div class="col-12 col-sm-6">
+            <label class="form-label" for="recInterval">Intervallo</label>
+            <input id="recInterval" type="number" min="1" value="1" class="form-control">
+            <div class="form-text">Es. ogni <b>1</b> mese / ogni <b>2</b> settimane</div>
+          </div>
+
+          <div class="col-12 col-sm-6">
+            <label class="form-label" for="recStart">Data inizio</label>
+            <input id="recStart" type="date" class="form-control">
+          </div>
+          <div class="col-12 col-sm-6">
+            <label class="form-label" for="recEnd">Data fine (opz.)</label>
+            <input id="recEnd" type="date" class="form-control">
+          </div>
+
+          <!-- Weekly -->
+          <div class="col-12 col-sm-6 rec-weekly d-none">
+            <label class="form-label" for="recWeekday">Giorno della settimana</label>
+            <select id="recWeekday" class="form-select">
+              <option value="1">Lunedì</option><option value="2">Martedì</option>
+              <option value="3">Mercoledì</option><option value="4">Giovedì</option>
+              <option value="5">Venerdì</option><option value="6">Sabato</option>
+              <option value="7">Domenica</option>
+            </select>
+          </div>
+
+          <!-- Monthly -->
+          <div class="col-12 col-md-4 rec-monthly">
+            <label class="form-label" for="recMonthlyMode">Mensile: modalità</label>
+            <select id="recMonthlyMode" class="form-select">
+              <option value="giorno_fisso" selected>Giorno fisso</option>
+              <option value="ultimo_giorno">Ultimo giorno</option>
+            </select>
+          </div>
+          <div class="col-6 col-md-4 rec-monthly rec-monthly-day">
+            <label class="form-label" for="recDay">Giorno (1–31)</label>
+            <input id="recDay" type="number" min="1" max="31" class="form-control">
+          </div>
+          <div class="col-6 col-md-4 rec-monthly rec-monthly-day">
+            <label class="form-label" for="recFallback">Mesi corti</label>
+            <select id="recFallback" class="form-select">
+              <option value="EOM" selected>Vai a fine mese (consigliato)</option>
+              <option value="shift_al_basso">Scala al giorno max</option>
+            </select>
+          </div>
+
+          <!-- Yearly -->
+          <div class="col-6 rec-yearly d-none">
+            <label class="form-label" for="recADay">Giorno</label>
+            <input id="recADay" type="number" min="1" max="31" class="form-control">
+          </div>
+          <div class="col-6 rec-yearly d-none">
+            <label class="form-label" for="recAMonth">Mese</label>
+            <input id="recAMonth" type="number" min="1" max="12" class="form-control">
+          </div>
+
+          <div class="col-12 col-sm-6">
+            <label class="form-label" for="recLookahead">Genera in anticipo (giorni)</label>
+            <input id="recLookahead" type="number" min="0" value="45" class="form-control">
+          </div>
+          <div class="col-12 col-sm-6">
+            <label class="form-label" for="recStatus">Stato</label>
+            <select id="recStatus" class="form-select">
+              <option value="active" selected>Attiva</option>
+              <option value="paused">In pausa</option>
+            </select>
+          </div>
+
+          <div class="col-12">
+            <div class="form-check">
+              <input class="form-check-input" type="checkbox" id="recGenerateNow" checked>
+              <label class="form-check-label" for="recGenerateNow">Genera subito le prossime istanze</label>
+            </div>
+          </div>
+        </div>
       </div>
 
-      <div class="mb-3">
-        <label class="form-label" for="categoria">Categoria</label>
-        <select id="categoria" class="form-select" required>
-          <option value="Cibo">Cibo</option>
-          <option value="Casa">Casa</option>
-          <option value="Trasporti">Trasporti</option>
-          <option value="Svago">Svago</option>
-          <option value="Salute">Salute</option>
-          <option value="Altro" selected>Altro</option>
-        </select>
-      </div>
-
-      <div class="mb-3">
-        <label class="form-label" for="etichette">Etichette (separate da virgola)</label>
-        <input id="etichette" type="text" class="form-control" placeholder="es. fisso, abbonamento">
-      </div>
-
-      <button id="saveBtn" class="btn btn-primary w-100" type="submit">Salva</button>
+      <button id="saveBtn" class="btn btn-primary w-100 mt-3" type="submit">Salva</button>
     </form>
   </div>
 
   <script type="module">
     import { requireAuth, logout } from "./js/auth.js";
-    import { addSpesa } from "./js/spese.js";
+    import { addSpesa, addSerieRicorrente, materializeSerie } from "./js/spese.js";
     requireAuth();
-
-    // navbar attiva + logout
-    const file = (location.pathname.split("/").pop() || "index.html").toLowerCase();
-    document.querySelectorAll('nav a[data-page]').forEach(a=>{
-      if (a.getAttribute('data-page') === file) a.classList.add('fw-bold','text-decoration-underline');
-    });
-    document.getElementById("logoutLink")?.addEventListener("click",(e)=>{ e.preventDefault(); logout(); });
 
     // default oggi
     const today = new Date();
-    document.getElementById("data").value = today.toISOString().slice(0,10);
+    const todayYMD = today.toISOString().slice(0,10);
+    document.getElementById("data").value = todayYMD;
+    document.getElementById("recStart").value = todayYMD;
+
+    // UI ricorrenza
+    const recSwitch = document.getElementById("recSwitch");
+    const recPanel  = document.getElementById("recPanel");
+    const recFreq   = document.getElementById("recFreq");
+    const recMonthlyMode = document.getElementById("recMonthlyMode");
+
+    // set default giorno mensile = giorno della data
+    document.getElementById("recDay").value = new Date(todayYMD).getDate();
+
+    recSwitch.addEventListener("change", () => {
+      recPanel.style.display = recSwitch.checked ? "block" : "none";
+    });
+
+    function updateRecVisibility() {
+      const f = recFreq.value;
+      document.querySelectorAll(".rec-weekly").forEach(e => e.classList.toggle("d-none", f!=="weekly"));
+      document.querySelectorAll(".rec-monthly").forEach(e => e.classList.toggle("d-none", f!=="monthly"));
+      document.querySelectorAll(".rec-yearly").forEach(e => e.classList.toggle("d-none", f!=="yearly"));
+      document.querySelectorAll(".rec-monthly-day").forEach(e => e.classList.toggle("d-none", !(f==="monthly" && recMonthlyMode.value==="giorno_fisso")));
+    }
+    recFreq.addEventListener("change", updateRecVisibility);
+    recMonthlyMode.addEventListener("change", updateRecVisibility);
+    updateRecVisibility();
 
     const form = document.getElementById("formSpesa");
     const msg  = document.getElementById("msg");
@@ -104,20 +212,71 @@
       msg.innerHTML = "";
       btn.disabled = true;
 
-      const payload = {
-        data: document.getElementById("data").value,
-        descrizione: document.getElementById("descrizione").value.trim(),
-        importo: document.getElementById("importo").value,
-        categoria: document.getElementById("categoria").value,
-        etichette: document.getElementById("etichette").value
-      };
-
       try {
-        if (!payload.data || !payload.descrizione || !payload.importo) throw new Error("Compila tutti i campi obbligatori.");
-        await addSpesa(payload);
-        form.reset();
-        document.getElementById("data").value = today.toISOString().slice(0,10);
-        msg.innerHTML = `<div class="alert alert-success">Spesa salvata!</div>`;
+        const base = {
+          data: document.getElementById("data").value,
+          descrizione: document.getElementById("descrizione").value.trim(),
+          importo: document.getElementById("importo").value,
+          categoria: document.getElementById("categoria").value,
+          etichette: document.getElementById("etichette").value
+        };
+        if (!base.data || !base.descrizione || !base.importo) throw new Error("Compila i campi obbligatori.");
+
+        if (!recSwitch.checked) {
+          // Spesa singola
+          await addSpesa(base);
+          form.reset();
+          document.getElementById("data").value = todayYMD;
+          msg.innerHTML = `<div class="alert alert-success">Spesa salvata!</div>`;
+        } else {
+          // Serie ricorrente
+          const serieInput = {
+            ...base,
+            startDate: document.getElementById("recStart").value || base.data,
+            endDate: document.getElementById("recEnd").value || null,
+            frequenza: document.getElementById("recFreq").value,
+            interval: document.getElementById("recInterval").value || 1,
+            lookaheadDays: document.getElementById("recLookahead").value || 45,
+            status: document.getElementById("recStatus").value,
+
+            // specifici
+            weekday: document.getElementById("recWeekday").value,
+            monthlyMode: document.getElementById("recMonthlyMode").value,
+            anchorDay: document.getElementById("recDay").value,
+            monthlyFallback: document.getElementById("recFallback").value,
+            anchorMonth: document.getElementById("recAMonth").value,
+          };
+
+          // Normalizza per frequenza
+          if (serieInput.frequenza === "weekly") {
+            if (!serieInput.weekday) throw new Error("Seleziona il giorno della settimana.");
+          }
+          if (serieInput.frequenza === "monthly") {
+            if (!serieInput.monthlyMode) throw new Error("Seleziona la modalità mensile.");
+            if (serieInput.monthlyMode === "giorno_fisso" && !serieInput.anchorDay) {
+              throw new Error("Inserisci il giorno del mese.");
+            }
+          }
+          if (serieInput.frequenza === "yearly") {
+            if (!serieInput.anchorDay || !serieInput.anchorMonth) {
+              throw new Error("Completa giorno e mese per ricorrenza annuale.");
+            }
+          }
+
+          const serie = await addSerieRicorrente(serieInput);
+
+          if (document.getElementById("recGenerateNow").checked) {
+            const res = await materializeSerie(serie.id);
+            msg.innerHTML = `<div class="alert alert-success">Serie salvata! Generate ${res.created} istanze future.</div>`;
+          } else {
+            msg.innerHTML = `<div class="alert alert-success">Serie salvata! Potrai generare le istanze dalla pagina “Ricorrenti”.</div>`;
+          }
+
+          form.reset();
+          document.getElementById("data").value = todayYMD;
+          document.getElementById("recStart").value = todayYMD;
+          recPanel.style.display = "none";
+        }
       } catch (err) {
         msg.innerHTML = `<div class="alert alert-danger">${err.message}</div>`;
       } finally {
